--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </label>
                     <label for="texterea">
                         <textarea name="text" id="about" class="texts text" maxlength="176"
-                            placeholder="Email"></textarea>
+                            placeholder="Пишіть"></textarea>
                     </label>
                     <Label for="batton">
                         <input type="submit" class="submit" value="Зареєструватися">
@@ -158,7 +158,7 @@
             <h2>04. форма таблицею</h2>
             <h3>Заповніть усі необхідні поля</h3>
             <div>
-                <form class="first-form">
+                <form class="first-form ff">
                     <table class="first-forms">
                         <thead>
                             <tr>
@@ -294,7 +294,7 @@
                                 </select>
                             </label>
                         </td>
-                        <td>
+                        <td class="fm-td">
                             <span>Адреса</span>
                             <label for="text">
                                 <input type="text" name="text" id="text" class="footer-text">
