--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <textarea name="text" id="about" class="texts text" maxlength="176"
                             placeholder="Пишіть"></textarea>
                     </label>
-                    <Label for="batton">
+                    <Label for="batton" class="first-form-label">
                         <input type="submit" class="submit" value="Зареєструватися">
                     </Label>
                 </form>
@@ -43,19 +43,19 @@
             <h2>02. елементи</h2>
             <form class="clr">
                 <div class="seconde-form">
-                    <p>
+                    <p class="four-form-p">
                         <input type="radio" name="radio" id="newpost" class="radio">
                         <label for="newpost">
                             Нова Пошта
                         </label>
                     </p>
-                    <p>
+                    <p class="four-form-p">
                         <input type="radio" name="radio" id="kurier" class="radio">
                         <label for="kurier">
                             Кур’єр
                         </label>
                     </p>
-                    <p>
+                    <p class="four-form-p">
                         <input type="radio" name="radio" id="go" class="radio" disabled>
                         <label for="go">
                             Самовивіз
@@ -63,19 +63,19 @@
                     </p>
                 </div>
                 <div class="third-form">
-                    <p>
+                    <p class="four-form-p">
                         <input type="checkbox" name="checkbox" id="read" class="checkbox">
                         <label for="read">
                             Прочитав умови договору
                         </label>
                     </p>
-                    <p>
+                    <p class="four-form-p">
                         <input type="checkbox" name="checkbox" id="pdv" class="checkbox">
                         <label for="pdv">
                             Згідний з ПДВ 9%
                         </label>
                     </p>
-                    <p>
+                    <p class="four-form-p">
                         <input type="checkbox" name="checkbox" id="news" class="checkbox" disabled>
                         <label for="news">
                             Отримувати новини на ел. пошту
@@ -86,21 +86,21 @@
                     <p>
                         Статус
                     </p>
-                    <p>
+                    <p class="four-form-p">
                         <input type="checkbox" name="checkbox" id="novetly" class="checkbox">
                         <label for="novetly">
                             Новинки
                         </label>
                     </p>
-                    <p>
+                    <p class="four-form-p">
                         <input type="checkbox" name="checkbox" id="stock" class="checkbox">
                         <label for="stock">
                             Акційні товари
                         </label>
                     </p>
-                    <p>
+                    <p class="four-form-p">
                         <input type="checkbox" name="checkbox" id="buys" class="checkbox">
-                        <label for="buys">
+                        <label for="buys" class="four-form-label">
                             Розпродаж
                         </label>
                     </p><br>
@@ -203,13 +203,13 @@
                                     <p>Стать:</p>
                                 </td>
                                 <td class="people">
-                                    <p class="men">
+                                    <p class="mens four-form-p">
                                         <input type="radio" name="menes" id="mens" class="radio">
                                         <label for="mens">
                                             Чоловік
                                         </label>
                                     </p>
-                                    <p class="women">
+                                    <p class="womens four-form-p">
                                         <input type="radio" name="menes" id="womens" class="radio">
                                         <label for="womens">
                                             Жінка
@@ -326,7 +326,7 @@
                 </table>
             </div>
             <div class="third-form menu-footer">
-                <p>
+                <p class="last-footer-p">
                     <input type="checkbox" name="checkbox" id="for" class="checkbox">
                     <label for="for" class="ok">
                         Я погоджуюсь з правилами оплати та доставки товару
@@ -371,7 +371,7 @@
                             Забули пароль?
                         </a>
                     </p>
-                    <p class="four-p-lt-mn">
+                    <p class="four-p-lt-mn last-footer-p">
                         <input type="checkbox" name="checkbox" id="lt" class="checkbox">
                         <label for="lt" class="ok">
                             Запам’ятати пароль
