--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                 <td>
                                     <label for="city" value="Ваше місто" class="select">
                                         <select name="city" class="about text" id="city">
-                                            <option value="Ваше місто" class="about text">Ваше місто</option>
+                                            <option value="Ваше місто" class="about text" selected disabled>Ваше місто</option>
                                             <option value="Хмельницький" class="about text">Хмельницький</option>
                                             <option value="Київ" class="about text">Київ</option>
                                         </select>
