--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                 </td>
                                 <td>
                                     <label for="text">
-                                        <input type="mail" name="mail" class="text" maxlength="35" placeholder="Email">
+                                        <input type="mail" name="mail" class="text" maxlength="35" placeholder="Введіть не менше 6 символів">
                                     </label>
                                 </td>
                             </tr>
@@ -222,7 +222,7 @@
                                     <p>Фото:</p>
                                 </th>
                                 <th>
-                                    <label for="files" class="files">
+                                    <label for="files" class="files hov">
                                         <input type="file" name="file" id="files" class="file">
                                         Виберіть файл
                                     </label>
@@ -244,7 +244,7 @@
                                     &nbsp;
                                 </th>
                                 <th>
-                                    <Label for="batton">
+                                    <Label for="batton" class="first-form-label">
                                         <input type="submit" class="submit" value="Зареєструватися">
                                     </Label>
                                 </th>
@@ -341,7 +341,7 @@
                         </Label>
                     </div>
                     <div class="second-last-form">
-                        <Label for="batton">
+                        <Label for="batton" class="first-form-label">
                             <input type="submit" class="baton second-baton" value="Оформити покупку">
                         </Label>
                     </div>
@@ -356,13 +356,13 @@
                 <form>
                     <p>
                         <span class="special-span">Логін</span>
-                        <input type="text" name="text" class="lt-mn">
+                        <input type="text" name="text" class="lt-mn" maxlength="31">
                         <label for="text" class="lt-lb">
                         </label>
                     </p>
                     <p class="seconde-p-lt-mn">
                         <span>Пароль</span>
-                        <input type="password" name="text" class="lt-mn">
+                        <input type="password" name="text" class="lt-mn" maxlength="31">
                         <label for="text" class="lt-lb">
                         </label>
                     </p>
@@ -378,7 +378,7 @@
                         </label>
                     </p>
                     <p>
-                        <Label for="batton">
+                        <Label for="batton" class="first-form-label">
                             <input type="submit" class="baton second-baton bat" value="Увійти">
                         </Label>
                     </p>
