--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <input type="text" name="input-mail" class="text" maxlength="31" placeholder="Введіть ім’я">
                     </label>
                     <label>
-                        <input type="mail" name="input-mail" class="text" maxlength="35" placeholder="Email">
+                        <input type="email" name="input-mail" class="text" maxlength="35" placeholder="Email">
                     </label>
                     <label for="sel" class="select">
                         <select name="city" class="about text abouts" id="sel">
@@ -30,7 +30,8 @@
                         </select>
                     </label>
                     <label>
-                        <textarea name="texterea-text" class="texts text" maxlength="176" placeholder="Пишіть"></textarea>
+                        <textarea name="texterea-text" class="texts text" maxlength="176"
+                            placeholder="Пишіть"></textarea>
                     </label>
                     <Label class="first-form-label">
                         <input type="submit" class="submit" value="Зареєструватися">
@@ -166,88 +167,90 @@
                                 </td>
                                 <td>
                                     <label>
-                                        <input type="text" name="input-text" class="text" id="fio" maxlength="31" placeholder="Введіть ім’я">
+                                        <input type="text" name="input-text" class="text" id="fio" maxlength="31"
+                                            placeholder="Введіть ім’я">
                                     </label>
                                 </td>
                             </tr>
                         </thead>
-                        <t>
-                            <tr>
-                                <td class="first-text">
-                                    <label for="pass">Пароль:</label>
-                                </td>
-                                <td>
-                                    <label>
-                                        <input type="mail" name="input-mail" class="text" id="pass" maxlength="35" placeholder="Введіть не менше 6 символів">
+                        <tr>
+                            <td class="first-text">
+                                <label for="pass">Пароль:</label>
+                            </td>
+                            <td>
+                                <label>
+                                    <input type="email" name="input-mail" class="text" id="pass" maxlength="35"
+                                        placeholder="Введіть не менше 6 символів">
+                                </label>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="first-text">
+                                <label for="city">Місто:</label>
+                            </td>
+                            <td>
+                                <label class="select">
+                                    <select name="city" class="about text" id="city">
+                                        <option value="Ваше місто" class="about text" selected disabled>Ваше місто
+                                        </option>
+                                        <option value="Хмельницький" class="about text">Хмельницький</option>
+                                        <option value="Київ" class="about text">Київ</option>
+                                    </select>
+                                </label>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label>Стать:</label>
+                            </td>
+                            <td class="people">
+                                <p class="mens four-form-p">
+                                    <input type="radio" name="menes" id="mens" class="radio">
+                                    <label for="mens">
+                                        Чоловік
                                     </label>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="first-text">
-                                    <label for="city">Місто:</label>
-                                </td>
-                                <td>
-                                    <label value="Ваше місто" class="select">
-                                        <select name="city" class="about text" id="city">
-                                            <option value="Ваше місто" class="about text" selected disabled>Ваше місто
-                                            </option>
-                                            <option value="Хмельницький" class="about text">Хмельницький</option>
-                                            <option value="Київ" class="about text">Київ</option>
-                                        </select>
+                                </p>
+                                <p class="womens four-form-p">
+                                    <input type="radio" name="menes" id="womens" class="radio">
+                                    <label for="womens">
+                                        Жінка
                                     </label>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <label>Стать:</label>
-                                </td>
-                                <td class="people">
-                                    <p class="mens four-form-p">
-                                        <input type="radio" name="menes" id="mens" class="radio">
-                                        <label for="mens">
-                                            Чоловік
-                                        </label>
-                                    </p>
-                                    <p class="womens four-form-p">
-                                        <input type="radio" name="menes" id="womens" class="radio">
-                                        <label for="womens">
-                                            Жінка
-                                        </label>
-                                    </p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th class="first-text">
-                                    <label for="foto">Фото:</label>
-                                </th>
-                                <th>
-                                    <label class="files hov">
-                                        <input type="file" name="file" class="file" id="foto">
-                                        Виберіть файл
-                                    </label>
-                                </th>
-                            </tr>
-                            <tr>
-                                <th class="first-text koment">
-                                    <label for="textar">Коментарій:</label>
-                                </th>
-                                <th>
-                                    <label>
-                                        <textarea name="texterea-text" class="text texts textes" id="textar" maxlength="176" placeholder="Введіть текст повідомлення"></textarea>
-                                    </label>
-                                </th>
-                            </tr>
-                            <tr>
-                                <th class="first-text">
-                                    &nbsp;
-                                </th>
-                                <th>
-                                    <Label class="first-form-label">
-                                        <input type="submit" class="submit" value="Зареєструватися">
-                                    </Label>
-                                </th>
-                            </tr>
-                            </tbody>
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="first-text">
+                                <label for="foto">Фото:</label>
+                            </th>
+                            <th>
+                                <label class="files hov">
+                                    <input type="file" name="file" class="file" id="foto">
+                                    Виберіть файл
+                                </label>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th class="first-text koment">
+                                <label for="textar">Коментарій:</label>
+                            </th>
+                            <th>
+                                <label>
+                                    <textarea name="texterea-text" class="text texts textes" id="textar" maxlength="176"
+                                        placeholder="Введіть текст повідомлення"></textarea>
+                                </label>
+                            </th>
+                        </tr>
+                        <tr>
+                            <th class="first-text">
+                                &nbsp;
+                            </th>
+                            <th>
+                                <Label class="first-form-label">
+                                    <input type="submit" class="submit" value="Зареєструватися">
+                                </Label>
+                            </th>
+                        </tr>
+                        </tbody>
                     </table>
                 </form>
             </div>
@@ -261,19 +264,19 @@
                         <tr>
                             <td>
                                 <span>Прізвище та ім’я</span>
-                                <input type="text" name="input-text">
-                                <label for="text">
+                                <input type="text" name="input-text" id="tex">
+                                <label for="tex">
                                 </label>
                             </td>
                             <td>
                                 <span>Ел. пошта</span>
-                                <input type="mail" name="input-mail" class="mail">
+                                <input type="email" name="input-mail" class="mail" id="mail">
                                 <label for="mail">
                                 </label>
                             </td>
                             <td>
                                 <span>Телефон</span>
-                                <input type="text" name="input-text" class="telefon">
+                                <input type="text" name="input-text" class="telefon" id="text">
                                 <label for="text" class="footer-label">
                                 </label>
                             </td>
@@ -285,7 +288,7 @@
                         <tr>
                             <td>
                                 <span>Країна</span>
-                                <label value="Ваше місто" class="selects">
+                                <label class="selects">
                                     <select name="footer-city" class="about text footer-city">
                                         <option value="Ваше місто" class="about text" selected disabled>Ваше країна
                                         </option>
@@ -312,7 +315,7 @@
                             </td>
                             <td>
                                 <span>Будинок</span>
-                                <input type="mail" name="input-mail" class="mail">
+                                <input type="email" name="input-mail" class="mail">
                                 <label for="mail">
                                 </label>
                             </td>
@@ -333,21 +336,21 @@
                         </label>
                     </p>
                 </div>
-                <div class="last-form clr">
-                    <form>
-                        <div class="first-last-form">
-                            <Label>
-                                <input type="submit" class="baton" value="Повернутися назад">
-                            </Label>
-                        </div>
-                        <div class="second-last-form">
-                            <Label class="first-form-label">
-                                <input type="submit" class="baton second-baton" value="Оформити покупку">
-                            </Label>
-                        </div>
-                    </form>
-                </div>
             </form>
+            <div class="last-form clr">
+                <form>
+                    <div class="first-last-form">
+                        <Label>
+                            <input type="submit" class="baton" value="Повернутися назад">
+                        </Label>
+                    </div>
+                    <div class="second-last-form">
+                        <Label class="first-form-label">
+                            <input type="submit" class="baton second-baton" value="Оформити покупку">
+                        </Label>
+                    </div>
+                </form>
+            </div>
         </footer>
         <div class="fixed">
             <h2>
