--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                                 <span>Країна</span>
                                 <label class="selects">
                                     <select name="footer-city" class="about text footer-city">
-                                        <option value="Ваше місто" class="about text" selected disabled>Ваше країна
+                                        <option value="Ваше місто" class="about text" selected disabled>Ваша країна
                                         </option>
                                         <option value="Хмельницький" class="about text">Україна</option>
                                         <option value="Київ" class="about text">Шрі-Ланка</option>
